Prevent text from wrapping in thin mode

--- a/src/grid/mode.scss
+++ b/src/grid/mode.scss
@@ -18,6 +18,7 @@
 @mixin thin() {
   flex: 0 1 0;
   width: unset;
+  white-space: nowrap;
 }
 
 @mixin fill() {
